force-app/main/default/objects/FRU_List__c/FRU_List__c.object-meta.xml
<CustomObject>
    <label>FRU List</label>
    <nameField>
        <displayFormat>FRU-{0000}</displayFormat>
        <label>FRU List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FRU Lists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>