force-app/main/default/objects/FRU_List__c/fields/ERP_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>ERP_Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by SAP via integration. Used to check the part being added on a parts order line to ensure part is compatible for the installed product (Product on IP compared with the ERP Parent Product field).</description>
    <label>ERP Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>FRU Lists (Parent Product)</relationshipLabel>
    <relationshipName>FRU_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>