force-app/main/default/objects/FRU_List__c/fields/ERP_Product__c.field-meta.xml
<CustomField>
    <fullName>ERP_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by SAP via integration. Used to check the part being added on a parts order line to ensure part is compatible for the installed product (Product on the parts order line is comapred with the ERP Product field).</description>
    <label>ERP Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>FRU Lists (Product)</relationshipLabel>
    <relationshipName>FRU_List</relationshipName>
    <type>Lookup</type>
</CustomField>