force-app/main/default/objects/FRU_List__c/fields/Service_Bill_Of_Materials__c.field-meta.xml
<CustomField>
    <fullName>Service_Bill_Of_Materials__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Service BOM.
To be populated from SAP.</description>
    <label>Service Bill Of Materials</label>
    <referenceTo>Service_Bill_Of_Materials__c</referenceTo>
    <relationshipLabel>FRU Lists</relationshipLabel>
    <relationshipName>FRU_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>